<resources>
    <string name="app_name" translatable="false">To-do App</string>
    <string name="logo">logo</string>
    <string name="New_task">New task</string>
    <string name="Task_name">Task name</string>
    <string name="task">task</string>
    <string name="Task_due_date">Task due date</string>
    <string name="date">date</string>
    <string name="title_activity_add_card">Add task</string>
    <string name="Add_a_task">Add a task</string>
    <string name="go_back">go back</string>
    <string name="Example_task_name">Go shopping</string>
    <string name="Priority">Priority</string>
    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
    <string name="Remove_task">Remove task</string>
    <string name="Save_task">Save task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Pick_a_day">Pick a day</string>
    <string name="Need_choose_name">You need to choose a name</string>
    <string name="Need_choose_date">You need to choose a day</string>
    <string-array name="priorities">
        <item>@string/Low</item>
        <item>@string/Medium</item>
        <item>@string/High</item>
    </string-array>
    <string name="Need_choose_time">You need to choose an hour</string>
    <string name="Pick_a_time">Pick a time</string>
    <string name="time">time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>