<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCardActivity">

    <TextView
        android:id="@+id/txt_add_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/New_task"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/fab_back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_task_name"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/task"
        android:ems="10"
        android:hint="@string/Task_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_card" />

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="316dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/date"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:hint="@string/Pick_a_day"
        android:onClick="showCalendar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_task_name" />

    <Spinner
        android:id="@+id/sp_priority"
        android:layout_width="258dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_date" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/go_back"
        android:focusable="true"
        android:onClick="goBack"
        app:tint="@color/black"
        app:fabCustomSize="58dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_a_task"
        android:focusable="true"
        android:onClick="addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save_task"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>